# collection-claude-code-source-code

./: README-CN.md  README.MD  README.md  agent.py  config.py  context.py  demo.py  make_demo.py  nano_claude.py  providers.py  pyproject.toml  requirements.txt  tools.py
clawspring/: .gitignore  README.md  agent.py  clawspring.py  cloudsave.py  compaction.py  config.py  context.py  demo.py  memory.py  providers.py  pyproject.toml  requirements.txt  skills.py  subagent.py  tool_registry.py  tools.py
clawspring/demos/: make_brainstorm_demo.py  make_demo.py  make_proactive_demo.py  make_ssj_demo.py  make_telegram_demo.py
clawspring/docs/: README.CN.MD  README.DE.MD  README.ES.MD  README.FR.MD  README.JP.MD  README.KO.MD  architecture.md  comparison_claude_code_vs_nano_v3.03_cn.md  comparison_claude_code_vs_nano_v3.03_en.md  contributor_guide.md  readme.md  update_readme_v3.0.md
clawspring/docs/PR/: resume_Feature.md
clawspring/docs/superpowers/plans/: 2026-04-02-open-cc-enhancement.md
clawspring/docs/superpowers/specs/: 2026-04-02-open-cc-design.md
clawspring/mcp/: __init__.py  client.py  config.py  tools.py  types.py
clawspring/memory/: __init__.py  consolidator.py  context.py  scan.py  store.py  tools.py  types.py
clawspring/multi_agent/: __init__.py  subagent.py  tools.py
clawspring/plugin/: __init__.py  loader.py  recommend.py  store.py  types.py
clawspring/skill/: __init__.py  builtin.py  executor.py  loader.py  tools.py
clawspring/task/: __init__.py  store.py  tools.py  types.py
clawspring/tests/: test_compaction.py  test_diff_view.py  test_mcp.py  test_memory.py  test_plugin.py  test_skills.py  test_subagent.py  test_task.py  test_tool_registry.py  test_voice.py
clawspring/voice/: __init__.py  keyterms.py  recorder.py  stt.py
(+136 files in other folders)
