[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-claude-code"
version = "3.05.5"
description = "Minimal Python implementation of Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
voice  = ["sounddevice"]
vision = ["Pillow"]

[project.scripts]
nano_claude = "nano_claude:main"

[tool.setuptools]
py-modules = [
    "nano_claude",
    "agent",
    "cloudsave",
    "compaction",
    "config",
    "context",
    "providers",
    "skills",
    "subagent",
    "tool_registry",
    "tools",
]
packages = ["mcp", "memory", "multi_agent", "plugin", "skill", "task", "voice"]
