[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawspring"
version = "3.05.5"
description = "ClawSpring: A Fast, Hackable Python AI Coding Assistant"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
voice  = ["sounddevice"]
vision = ["Pillow"]

[project.scripts]
clawspring = "clawspring:main"

[tool.setuptools]
py-modules = [
    "clawspring",
    "agent",
    "cloudsave",
    "compaction",
    "config",
    "context",
    "providers",
    "skills",
    "subagent",
    "tool_registry",
    "tools",
]
packages = ["mcp", "memory", "multi_agent", "plugin", "skill", "task", "voice"]
